# RapidSwot

./: .gitignore  README.md  dev.sh  pom.xml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: build.yml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/interfaces/api/: routes.py
frontend/: package-lock.json  package.json
frontend/src/components/: ChatInterface.tsx  Sidebar.tsx  Toolbar.tsx
frontend/src/pages/: index.tsx
sandbox/: supervisord.conf
src/: __main__.py  example.py  mcp_client.py  mcp_server.py
src/agent/: __init__.py  browser.py  chain.py  llm.py  mcp.py
src/agent/core/: agent.py  domains.py  solver.py
src/agents/: browser_agent.py  coordinator.py  workflow_agent.py
src/agui/: __init__.py  autonomous.py  learning.py  multimodal.py
src/fetch/: __init__.py
src/filesystem/: __init__.py
src/git/: __init__.py
src/main/java/com/example/: GenerateTextFromTextInput.java
src/memory/: __init__.py
src/sequential/: __init__.py  planner.py
src/time/: __init__.py
src/vibetest/: __init__.py  mcp.py
tests/: conftest.py  test_agent_core.py  test_prompting.py  test_smoke.py
